5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4413/executions/1791_1599.log
== TEST (2019-05-29 14:13:56) 
-- CODE:
from numpy import*
v=array(eval(float("valor dos itens: ")))
i=0
while(v[i]=!80.00):
	if(v[i]>80.00):
		com = sum(v)-sum(v[1])*15/100
	else:
		com = sum(v)
	i=i+1
print(com)

-- ERROR:
File "XXXX", line 4
    while(v[i]=!80.00):
              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 14:14:17) 
-- CODE:
from numpy import*
v=array(eval(float("valor dos itens: ")))
i=0
while(v[i]=!80.00):
	if(v[i]>80.00):
		com = sum(v)-sum(v[1])*15/100
	else:
		com = sum(v)
	i=i+1
print(com)

-- EXECUTION TIME:
0.115855
-- ERROR:
  File "/home/codebench/codes/1791/1599/main.py", line 4
    while(v[i]=!80.00):
              ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:14:43) 
-- CODE:
from numpy import*
v=array(eval(float("valor dos itens: ")))
i=0
while(v[i]!=80.00):
	if(v[i]>80.00):
		com = sum(v)-sum(v[1])*15/100
	else:
		com = sum(v)
	i=i+1
print(com)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:15:41) 
-- CODE:
from numpy import*
v=array(eval(float("valor dos itens: ")))
i=0
while(v[i]!=80.00):
	if(v[i]>80.00):
		com = sum(v)-sum(v[1])*15/100
	else:
		com = sum(v)
	i=i+1
print(com, dtype= float)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:16:15) 
-- CODE:
from numpy import*
v=array(eval(float("valor dos itens: ", dtype=float)))
i=0
while(v[i]!=80.00):
	if(v[i]>80.00):
		com = sum(v)-sum(v[1])*15/100
	else:
		com = sum(v)
	i=i+1
print(com)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:16:27) 
-- CODE:
from numpy import*
v=array(eval(float("valor dos itens: ", ftype=float)))
i=0
while(v[i]!=80.00):
	if(v[i]>80.00):
		com = sum(v)-sum(v[1])*15/100
	else:
		com = sum(v)
	i=i+1
print(com)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:16:31) 
-- CODE:
from numpy import*
v=array(eval(float("valor dos itens: ", type=float)))
i=0
while(v[i]!=80.00):
	if(v[i]>80.00):
		com = sum(v)-sum(v[1])*15/100
	else:
		com = sum(v)
	i=i+1
print(com)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:16:46) 
-- CODE:
from numpy import*
v=array(eval(float("valor dos itens: ", dtype=float)))
i=0
while(v[i]!=80.00):
	if(v[i]>80.00):
		com = sum(v)-sum(v[1])*15/100
	else:
		com = sum(v)
	i=i+1
print(com)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:16:58) 
-- CODE:
from numpy import*
v=array(eval(float("valor dos itens: ")))
i=0
while(v[i]!=80.00):
	if(v[i]>80.00):
		com = sum(v)-sum(v[1])*15/100
	else:
		com = sum(v)
	i=i+1
print(com)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
